@@ -4,13 +4,14 @@
 
 package org.chromium.chrome.browser.omnibox.suggestions;
 
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.anyInt;
-import static org.mockito.Mockito.clearInvocations;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.eq;
-import static org.mockito.Mockito.inOrder;
-import static org.mockito.Mockito.mock;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.atLeastOnce;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -19,132 +20,164 @@ import static org.mockito.Mockito.when;
 import static org.chromium.components.omnibox.GroupConfigTestSupport.SECTION_1_NO_HEADER;
 import static org.chromium.components.omnibox.GroupConfigTestSupport.SECTION_2_WITH_HEADER;
 import static org.chromium.components.omnibox.GroupConfigTestSupport.SECTION_3_WITH_HEADER;
+import static org.chromium.components.omnibox.GroupConfigTestSupport.SECTION_MOST_VISITED;
 
-import androidx.test.filters.SmallTest;
+import android.content.Context;
 
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.TestRule;
 import org.junit.runner.RunWith;
-import org.mockito.InOrder;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
-import org.robolectric.annotation.Config;
+import org.mockito.quality.Strictness;
 
+import org.chromium.base.ContextUtils;
+import org.chromium.base.supplier.ObservableSuppliers;
+import org.chromium.base.supplier.SupplierUtils;
 import org.chromium.base.test.BaseRobolectricTestRunner;
-import org.chromium.chrome.browser.omnibox.OmniboxSuggestionType;
-import org.chromium.chrome.browser.omnibox.suggestions.dividerline.DividerLineProcessor;
-import org.chromium.chrome.browser.omnibox.suggestions.header.HeaderProcessor;
-import org.chromium.chrome.test.util.browser.Features;
+import org.chromium.base.test.util.Features.EnableFeatures;
+import org.chromium.chrome.browser.browser_controls.BrowserControlsStateProvider.ControlsPosition;
+import org.chromium.chrome.browser.omnibox.styles.OmniboxResourceProvider;
+import org.chromium.chrome.browser.omnibox.suggestions.SuggestionCommonProperties.GroupSeparatorType;
+import org.chromium.chrome.browser.omnibox.suggestions.SuggestionCommonProperties.PositionalMode;
+import org.chromium.chrome.browser.ui.theme.BrandedColorScheme;
+import org.chromium.components.omnibox.AutocompleteInput;
 import org.chromium.components.omnibox.AutocompleteMatch;
 import org.chromium.components.omnibox.AutocompleteMatchBuilder;
+import org.chromium.components.omnibox.AutocompleteRequestType;
 import org.chromium.components.omnibox.AutocompleteResult;
+import org.chromium.components.omnibox.GroupsProto.GroupConfig;
 import org.chromium.components.omnibox.GroupsProto.GroupsInfo;
+import org.chromium.components.omnibox.OmniboxFeatureList;
+import org.chromium.components.omnibox.OmniboxSuggestionType;
+import org.chromium.components.omnibox.suggestions.OmniboxSuggestionUiType;
 import org.chromium.ui.modelutil.PropertyModel;
-import org.chromium.url.ShadowGURL;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-/**
- * Tests for {@link DropdownItemViewInfoListBuilder}.
- */
+/** Tests for {@link DropdownItemViewInfoListBuilder}. */
 @RunWith(BaseRobolectricTestRunner.class)
-@Config(manifest = Config.NONE, shadows = {ShadowGURL.class})
 public class DropdownItemViewInfoListBuilderUnitTest {
-    public @Rule TestRule mProcessor = new Features.JUnitProcessor();
-    public @Rule MockitoRule mockitoRule = MockitoJUnit.rule();
+    private final Context mContext = ContextUtils.getApplicationContext();
 
-    private @Mock AutocompleteController mAutocompleteController;
-    private @Mock SuggestionProcessor mMockSuggestionProcessor;
-    private @Mock HeaderProcessor mMockHeaderProcessor;
-    private @Mock DividerLineProcessor mMockDividerLineProcessor;
-    private @Mock OmniboxPedalDelegate mMockOmniboxPedalDelegate;
+    @Rule
+    public final MockitoRule mMockitoRule = MockitoJUnit.rule().strictness(Strictness.STRICT_STUBS);
+
+    @Mock private SuggestionProcessor mMockSuggestionProcessor;
+    @Captor private ArgumentCaptor<PropertyModel> mPropertyModelCaptor;
+
+    private final AutocompleteInput mInput = new AutocompleteInput();
     DropdownItemViewInfoListBuilder mBuilder;
 
     @Before
     public void setUp() {
-        when(mMockSuggestionProcessor.createModel())
+        lenient()
+                .when(mMockSuggestionProcessor.createModel())
                 .thenAnswer((mock) -> new PropertyModel(SuggestionCommonProperties.ALL_KEYS));
-        when(mMockSuggestionProcessor.getViewTypeId()).thenReturn(OmniboxSuggestionUiType.DEFAULT);
+        lenient()
+                .when(mMockSuggestionProcessor.getViewTypeId())
+                .thenReturn(OmniboxSuggestionUiType.DEFAULT);
 
-        when(mMockHeaderProcessor.createModel())
-                .thenAnswer((mock) -> new PropertyModel(SuggestionCommonProperties.ALL_KEYS));
-        when(mMockHeaderProcessor.getViewTypeId()).thenReturn(OmniboxSuggestionUiType.HEADER);
+        OmniboxResourceProvider resourceProvider =
+                new OmniboxResourceProvider(mContext, BrandedColorScheme.LIGHT_BRANDED_THEME);
+        mBuilder =
+                new DropdownItemViewInfoListBuilder(
+                        SupplierUtils.ofNull(),
+                        (url) -> false,
+                        ObservableSuppliers.createNonNull(ControlsPosition.TOP),
+                        resourceProvider);
 
-        mBuilder = new DropdownItemViewInfoListBuilder(
-                () -> null, (url) -> false, mMockOmniboxPedalDelegate);
         mBuilder.registerSuggestionProcessor(mMockSuggestionProcessor);
-        mBuilder.setHeaderProcessorForTest(mMockHeaderProcessor);
     }
 
     /**
-     * Verify that two lists have exactly same content.
-     * Note: this works similarly to Assert.assertEquals(list1, list2), but instead of printing out
-     * the content of both lists, simply reports elements that differ.
-     * AutocompleteMatch.toString() is verbose enough that the result analysis may be difficult or
-     * even impossible for a small list if the output exceeds the Android's logcat entry length
-     * limit.
+     * Verify corner rounding and separator presence on a specific model.
+     *
+     * @param model the model to verify
+     * @param wantTopCornersRounded expected rounding state of top corners
+     * @param wantBottomCornersRounded expected rounding state of bottom corners
+     * @param wantSeparator expected state of the separator
      */
-    private <T> void verifyListsMatch(List<T> expected, List<T> actual) {
-        Assert.assertEquals(expected.size(), actual.size());
-        for (int index = 0; index < expected.size(); index++) {
-            Assert.assertEquals("Item at position " + index + " does not match",
-                    expected.get(index), actual.get(index));
+    void verifyRounding(
+            PropertyModel model,
+            boolean wantTopCornersRounded,
+            boolean wantBottomCornersRounded,
+            boolean wantSeparator) {
+        @PositionalMode int expectedMode;
+        if (wantTopCornersRounded && wantBottomCornersRounded) {
+            expectedMode = PositionalMode.SINGLE;
+        } else if (wantTopCornersRounded) {
+            expectedMode = PositionalMode.TOP;
+        } else if (wantBottomCornersRounded) {
+            expectedMode = PositionalMode.BOTTOM;
+        } else {
+            expectedMode = PositionalMode.MIDDLE;
         }
+        assertEquals(expectedMode, model.get(SuggestionCommonProperties.BG_POSITIONAL_MODE));
+        assertEquals(wantSeparator, model.get(SuggestionCommonProperties.SHOW_DIVIDER));
     }
 
     @Test
-    @SmallTest
-    public void headers_buildsHeaderForFirstSuggestion() {
-        final List<AutocompleteMatch> actualList = new ArrayList<>();
+    public void buildDropdownViewInfoList_mixedGroups() {
         final var groupsDetails =
-                GroupsInfo.newBuilder().putGroupConfigs(1, SECTION_2_WITH_HEADER).build();
+                GroupsInfo.newBuilder()
+                        .putGroupConfigs(1, SECTION_MOST_VISITED)
+                        .putGroupConfigs(2, SECTION_2_WITH_HEADER)
+                        .build();
+
         when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
 
-        AutocompleteMatch suggestion =
+        AutocompleteMatch horizontal =
                 AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
                         .setGroupId(1)
                         .build();
+        AutocompleteMatch vertical =
+                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
+                        .setGroupId(2)
+                        .build();
 
-        actualList.add(suggestion);
-        actualList.add(suggestion);
+        var actualList =
+                List.of(horizontal, horizontal, vertical, vertical, horizontal, horizontal);
+        var model =
+                mBuilder.buildDropdownViewInfoList(
+                        mInput, AutocompleteResult.fromCache(actualList, groupsDetails));
 
-        final InOrder verifier = inOrder(mMockSuggestionProcessor, mMockHeaderProcessor);
-        final List<DropdownItemViewInfo> model = mBuilder.buildDropdownViewInfoList(
-                AutocompleteResult.fromCache(actualList, groupsDetails));
+        // 1 horizontal row + 2 vertical suggestions + 1 horizontal row.
+        assertEquals(4, model.size());
 
-        verifier.verify(mMockHeaderProcessor, times(1))
-                .populateModel(any(), eq(SECTION_2_WITH_HEADER.getHeaderText()));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestion), any(), eq(0));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestion), any(), eq(1));
-        Assert.assertEquals(3, model.size()); // 1 header + 2 suggestions.
+        // Check reported positions in list.
+        verify(mMockSuggestionProcessor, atLeastOnce()).doesProcessSuggestion(horizontal, 0);
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(vertical, 1);
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(vertical, 2);
+        verify(mMockSuggestionProcessor, atLeastOnce()).doesProcessSuggestion(horizontal, 3);
 
-        Assert.assertEquals(model.get(0).type, OmniboxSuggestionUiType.HEADER);
-        Assert.assertEquals(model.get(0).processor, mMockHeaderProcessor);
-        Assert.assertEquals(model.get(0).groupId, 1);
-        Assert.assertEquals(model.get(1).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(1).processor, mMockSuggestionProcessor);
-        Assert.assertEquals(model.get(1).groupId, 1);
-        Assert.assertEquals(model.get(2).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(2).processor, mMockSuggestionProcessor);
-        Assert.assertEquals(model.get(2).groupId, 1);
+        verify(mMockSuggestionProcessor, times(2))
+                .populateModel(eq(mInput), eq(horizontal), any(), eq(0));
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(vertical), any(), eq(1));
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(vertical), any(), eq(2));
+        verify(mMockSuggestionProcessor, times(2))
+                .populateModel(eq(mInput), eq(horizontal), any(), eq(3));
+
+        // Other calls we expect to see.
+        verify(mMockSuggestionProcessor).onSuggestionsReceived();
+        verify(mMockSuggestionProcessor, times(4)).createModel();
+        verify(mMockSuggestionProcessor, atLeastOnce()).getViewTypeId();
+        verifyNoMoreInteractions(mMockSuggestionProcessor);
     }
 
     @Test
-    @SmallTest
     public void headers_buildsHeadersOnlyWhenGroupChanges() {
         final List<AutocompleteMatch> actualList = new ArrayList<>();
-        final var groupsDetails = GroupsInfo.newBuilder()
-                                          .putGroupConfigs(1, SECTION_2_WITH_HEADER)
-                                          .putGroupConfigs(2, SECTION_3_WITH_HEADER)
-                                          .build();
+        final var groupsDetails =
+                GroupsInfo.newBuilder()
+                        .putGroupConfigs(1, SECTION_2_WITH_HEADER)
+                        .putGroupConfigs(2, SECTION_3_WITH_HEADER)
+                        .build();
 
         when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
         AutocompleteMatch suggestionWithNoGroup =
@@ -165,52 +198,62 @@ public class DropdownItemViewInfoListBuilderUnitTest {
         actualList.add(suggestionForGroup2);
         actualList.add(suggestionForGroup2);
 
-        final InOrder verifier = inOrder(mMockSuggestionProcessor, mMockHeaderProcessor);
-        final List<DropdownItemViewInfo> model = mBuilder.buildDropdownViewInfoList(
-                AutocompleteResult.fromCache(actualList, groupsDetails));
+        final List<DropdownItemViewInfo> model =
+                mBuilder.buildDropdownViewInfoList(
+                        mInput, AutocompleteResult.fromCache(actualList, groupsDetails));
 
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionWithNoGroup), any(), eq(0));
-        verifier.verify(mMockHeaderProcessor, times(1))
-                .populateModel(any(), eq(SECTION_2_WITH_HEADER.getHeaderText()));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup1), any(), eq(1));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup1), any(), eq(2));
-        verifier.verify(mMockHeaderProcessor, times(1))
-                .populateModel(any(), eq(SECTION_3_WITH_HEADER.getHeaderText()));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup2), any(), eq(3));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup2), any(), eq(4));
-        Assert.assertEquals(7, model.size()); // 2 headers + 5 suggestions.
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionWithNoGroup), any(), eq(0));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup1), any(), eq(1));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup1), any(), eq(2));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup2), any(), eq(3));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup2), any(), eq(4));
+        assertEquals(5, model.size()); // 5 suggestions.
 
-        Assert.assertEquals(model.get(0).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(0).groupId, -1);
+        var defaultGroupConfig = GroupConfig.getDefaultInstance();
 
-        Assert.assertEquals(model.get(1).type, OmniboxSuggestionUiType.HEADER);
-        Assert.assertEquals(model.get(1).groupId, 1);
-        Assert.assertEquals(model.get(2).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(2).groupId, 1);
-        Assert.assertEquals(model.get(3).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(3).groupId, 1);
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(0).type);
+        assertEquals(model.get(0).groupConfig, defaultGroupConfig);
+        verifyRounding(model.get(0).model, true, true, false);
+        assertNull(model.get(0).model.get(SuggestionCommonProperties.HEADER_TITLE));
 
-        Assert.assertEquals(model.get(4).type, OmniboxSuggestionUiType.HEADER);
-        Assert.assertEquals(model.get(4).groupId, 2);
-        Assert.assertEquals(model.get(5).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(5).groupId, 2);
-        Assert.assertEquals(model.get(6).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(6).groupId, 2);
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(1).type);
+        assertEquals(model.get(1).groupConfig, SECTION_2_WITH_HEADER);
+        verifyRounding(model.get(1).model, true, false, true);
+        assertEquals(
+                SECTION_2_WITH_HEADER.getHeaderText(),
+                model.get(1).model.get(SuggestionCommonProperties.HEADER_TITLE));
+
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(2).type);
+        assertEquals(model.get(2).groupConfig, SECTION_2_WITH_HEADER);
+        verifyRounding(model.get(2).model, false, true, false);
+        assertNull(model.get(2).model.get(SuggestionCommonProperties.HEADER_TITLE));
+
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(3).type);
+        assertEquals(model.get(3).groupConfig, SECTION_3_WITH_HEADER);
+        verifyRounding(model.get(3).model, true, false, true);
+        assertEquals(
+                SECTION_3_WITH_HEADER.getHeaderText(),
+                model.get(3).model.get(SuggestionCommonProperties.HEADER_TITLE));
+
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(4).type);
+        assertEquals(model.get(4).groupConfig, SECTION_3_WITH_HEADER);
+        verifyRounding(model.get(4).model, false, true, false);
+        assertNull(model.get(4).model.get(SuggestionCommonProperties.HEADER_TITLE));
     }
 
     @Test
-    @SmallTest
     public void headers_respectGroupHeadersWithNoTitle() {
         final List<AutocompleteMatch> actualList = new ArrayList<>();
-        final var groupsDetails = GroupsInfo.newBuilder()
-                                          .putGroupConfigs(1, SECTION_1_NO_HEADER)
-                                          .putGroupConfigs(2, SECTION_2_WITH_HEADER)
-                                          .build();
+        final var groupsDetails =
+                GroupsInfo.newBuilder()
+                        .putGroupConfigs(1, SECTION_1_NO_HEADER)
+                        .putGroupConfigs(2, SECTION_2_WITH_HEADER)
+                        .build();
 
         when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
         AutocompleteMatch suggestionWithNoGroup =
@@ -231,286 +274,260 @@ public class DropdownItemViewInfoListBuilderUnitTest {
         actualList.add(suggestionForGroup2);
         actualList.add(suggestionForGroup2);
 
-        final InOrder verifier = inOrder(mMockSuggestionProcessor, mMockHeaderProcessor);
-        final List<DropdownItemViewInfo> model = mBuilder.buildDropdownViewInfoList(
-                AutocompleteResult.fromCache(actualList, groupsDetails));
+        final List<DropdownItemViewInfo> model =
+                mBuilder.buildDropdownViewInfoList(
+                        mInput, AutocompleteResult.fromCache(actualList, groupsDetails));
 
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionWithNoGroup), any(), eq(0));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup1), any(), eq(1));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup1), any(), eq(2));
-        verifier.verify(mMockHeaderProcessor, times(1))
-                .populateModel(any(), eq(SECTION_2_WITH_HEADER.getHeaderText()));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup2), any(), eq(3));
-        verifier.verify(mMockSuggestionProcessor, times(1))
-                .populateModel(eq(suggestionForGroup2), any(), eq(4));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionWithNoGroup), any(), eq(0));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup1), any(), eq(1));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup1), any(), eq(2));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup2), any(), eq(3));
+        verify(mMockSuggestionProcessor)
+                .populateModel(eq(mInput), eq(suggestionForGroup2), any(), eq(4));
 
-        // Make sure no other headers were ever constructed.
-        verify(mMockHeaderProcessor, times(1)).populateModel(any(), any());
+        var defaultGroupConfig = GroupConfig.getDefaultInstance();
 
-        Assert.assertEquals(6, model.size()); // 1 header + 5 suggestions.
+        // We're showing:
+        // - 1 suggestion (no group)
+        // - 2 suggestions (Group 1 - no header)
+        // - 2 suggestions (Group 2 - with header)
+        assertEquals(5, model.size());
 
-        Assert.assertEquals(model.get(0).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(0).groupId, -1);
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(0).type);
+        assertEquals(model.get(0).groupConfig, defaultGroupConfig);
+        assertNull(model.get(0).model.get(SuggestionCommonProperties.HEADER_TITLE));
 
-        Assert.assertEquals(model.get(1).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(1).groupId, 1);
-        Assert.assertEquals(model.get(2).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(2).groupId, 1);
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(1).type);
+        assertEquals(
+                GroupSeparatorType.GAP,
+                model.get(1).model.get(SuggestionCommonProperties.GROUP_SEPARATOR_TYPE));
+        assertEquals(model.get(1).groupConfig, SECTION_1_NO_HEADER);
+        assertNull(model.get(1).model.get(SuggestionCommonProperties.HEADER_TITLE));
 
-        Assert.assertEquals(model.get(3).type, OmniboxSuggestionUiType.HEADER);
-        Assert.assertEquals(model.get(3).groupId, 2);
-        Assert.assertEquals(model.get(4).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(4).groupId, 2);
-        Assert.assertEquals(model.get(5).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(model.get(5).groupId, 2);
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(2).type);
+        assertEquals(model.get(2).groupConfig, SECTION_1_NO_HEADER);
+        assertNull(model.get(2).model.get(SuggestionCommonProperties.HEADER_TITLE));
+
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(3).type);
+        assertEquals(model.get(3).groupConfig, SECTION_2_WITH_HEADER);
+        assertEquals(
+                SECTION_2_WITH_HEADER.getHeaderText(),
+                model.get(3).model.get(SuggestionCommonProperties.HEADER_TITLE));
+
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, model.get(4).type);
+        assertEquals(model.get(4).groupConfig, SECTION_2_WITH_HEADER);
+        assertNull(model.get(4).model.get(SuggestionCommonProperties.HEADER_TITLE));
     }
 
     @Test
-    @SmallTest
-    public void builder_propagatesFocusChangeEvents() {
-        mBuilder.onUrlFocusChange(true);
-        verify(mMockHeaderProcessor, times(1)).onUrlFocusChange(eq(true));
-        verify(mMockSuggestionProcessor, times(1)).onUrlFocusChange(eq(true));
+    public void builder_propagatesOmniboxSessionStateChangeEvents() {
+        mBuilder.onOmniboxSessionStateChange(true);
+        verify(mMockSuggestionProcessor).onOmniboxSessionStateChange(eq(true));
 
-        mBuilder.onUrlFocusChange(false);
-        verify(mMockHeaderProcessor, times(1)).onUrlFocusChange(eq(false));
-        verify(mMockSuggestionProcessor, times(1)).onUrlFocusChange(eq(false));
+        mBuilder.onOmniboxSessionStateChange(false);
+        verify(mMockSuggestionProcessor).onOmniboxSessionStateChange(eq(false));
 
-        verifyNoMoreInteractions(mMockHeaderProcessor);
         verifyNoMoreInteractions(mMockSuggestionProcessor);
     }
 
     @Test
-    @SmallTest
     public void builder_propagatesNativeInitializedEvent() {
         mBuilder.onNativeInitialized();
-        verify(mMockHeaderProcessor, times(1)).onNativeInitialized();
-        verify(mMockSuggestionProcessor, times(1)).onNativeInitialized();
+        verify(mMockSuggestionProcessor).onNativeInitialized();
 
-        verifyNoMoreInteractions(mMockHeaderProcessor);
         verifyNoMoreInteractions(mMockSuggestionProcessor);
     }
 
     @Test
-    @SmallTest
-    public void visibleSuggestions_missingDropdownHeightAssumesDefaultGroupSize() {
-        final AutocompleteMatchBuilder builder =
-                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST);
-        when(mMockSuggestionProcessor.doesProcessSuggestion(any(AutocompleteMatch.class), anyInt()))
-                .thenReturn(true);
-        // Create AutocompleteResult with a lot of suggestions.
-        final AutocompleteMatch match = builder.build();
-        final AutocompleteResult result = AutocompleteResult.fromCache(
-                Arrays.asList(match, match, match, match, match, match, match, match, match, match),
-                null);
-        Assert.assertEquals(5, mBuilder.getVisibleSuggestionsCount(result));
+    @EnableFeatures(OmniboxFeatureList.AIM_SUPPRESS_VERBATIM_MATCH)
+    public void buildDropdownViewInfoList_aimMode_removesVerbatimMatches() {
+        mInput.setRequestType(AutocompleteRequestType.AI_MODE);
+        when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
 
-        // Same, with a shorter list of suggestions; in this case we don't know the height of the
-        // dropdown view, so we assume we can comfortably fit 5 suggestions.
-        final AutocompleteResult shortResult = AutocompleteResult.fromCache(
-                Arrays.asList(match, match, match, match, match), null);
-        Assert.assertEquals(5, mBuilder.getVisibleSuggestionsCount(shortResult));
-    }
-
-    @Test
-    @SmallTest
-    public void visibleSuggestions_computeNumberOfVisibleSuggestionsFromDropdownHeight() {
-        when(mMockSuggestionProcessor.doesProcessSuggestion(any(AutocompleteMatch.class), anyInt()))
-                .thenReturn(true);
-        when(mMockSuggestionProcessor.getMinimumViewHeight()).thenReturn(10);
-
-        final AutocompleteMatchBuilder builder =
-                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST);
-        final AutocompleteMatch match = builder.build();
-        final AutocompleteResult result = AutocompleteResult.fromCache(
-                Arrays.asList(match, match, match, match, match, match, match, match, match, match),
-                null);
-
-        mBuilder.setDropdownHeightWithKeyboardActive(60);
-        Assert.assertEquals(6, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(90);
-        Assert.assertEquals(9, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(30);
-        Assert.assertEquals(3, mBuilder.getVisibleSuggestionsCount(result));
-    }
-
-    @Test
-    @SmallTest
-    public void visibleSuggestions_partiallyVisibleSuggestionsAreCountedAsVisible() {
-        final AutocompleteMatchBuilder builder =
-                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST);
-        when(mMockSuggestionProcessor.doesProcessSuggestion(any(AutocompleteMatch.class), anyInt()))
-                .thenReturn(true);
-        final AutocompleteMatch match = builder.build();
-        final AutocompleteResult result = AutocompleteResult.fromCache(
-                Arrays.asList(match, match, match, match, match, match, match, match, match, match),
-                null);
-
-        when(mMockSuggestionProcessor.getMinimumViewHeight()).thenReturn(10);
-        mBuilder.setDropdownHeightWithKeyboardActive(45);
-        Assert.assertEquals(5, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(51);
-        Assert.assertEquals(6, mBuilder.getVisibleSuggestionsCount(result));
-    }
-
-    @Test
-    @SmallTest
-    public void visibleSuggestions_queriesCorrespondingProcessorsToDetermineViewAllocation() {
-        final SuggestionProcessor mockProcessor1 = mock(SuggestionProcessor.class);
-        final SuggestionProcessor mockProcessor2 = mock(SuggestionProcessor.class);
-        mBuilder.registerSuggestionProcessor(mockProcessor1);
-        mBuilder.registerSuggestionProcessor(mockProcessor2);
-        final AutocompleteMatchBuilder builder =
-                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST);
-        final AutocompleteMatch match1 = builder.setDescription("1").build();
-        final AutocompleteMatch match2 = builder.setDescription("2").build();
-        final AutocompleteMatch match3 = builder.setDescription("3").build();
-        final AutocompleteResult result =
-                AutocompleteResult.fromCache(Arrays.asList(match1, match2, match3), null);
-
-        // Heights reported by processors for suggestions 1, 2 and 3.
-        when(mMockSuggestionProcessor.doesProcessSuggestion(eq(match1), anyInt())).thenReturn(true);
-        when(mMockSuggestionProcessor.getMinimumViewHeight()).thenReturn(10);
-        when(mockProcessor1.doesProcessSuggestion(eq(match2), anyInt())).thenReturn(true);
-        when(mockProcessor1.getMinimumViewHeight()).thenReturn(20);
-        when(mockProcessor2.doesProcessSuggestion(eq(match3), anyInt())).thenReturn(true);
-        when(mockProcessor2.getMinimumViewHeight()).thenReturn(30);
-
-        mBuilder.setDropdownHeightWithKeyboardActive(
-                90); // fits all three suggestions and then some.
-        Assert.assertEquals(3, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(
-                45); // fits 2 suggestions fully, and 3rd partially.
-        Assert.assertEquals(3, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(30); // fits only 2 suggestions.
-        Assert.assertEquals(2, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(
-                20); // fits one suggestion fully and one partially.
-        Assert.assertEquals(2, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(10); // fits only one suggestion.
-        Assert.assertEquals(1, mBuilder.getVisibleSuggestionsCount(result));
-
-        mBuilder.setDropdownHeightWithKeyboardActive(5); // fits one suggestion partiall.
-        Assert.assertEquals(1, mBuilder.getVisibleSuggestionsCount(result));
-    }
-
-    @Test
-    @SmallTest
-    public void partialGrouping_matchesWithHeaderAreNotPromotedAboveURLs() {
-        final SuggestionProcessor mockProcessor = mock(SuggestionProcessor.class);
-        mBuilder.registerSuggestionProcessor(mockProcessor);
-        final AutocompleteMatch match1 =
+        AutocompleteMatch verbatim1 =
+                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_WHAT_YOU_TYPED)
+                        .build();
+        AutocompleteMatch verbatim2 =
+                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.URL_WHAT_YOU_TYPED)
+                        .build();
+        AutocompleteMatch regular =
                 AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
                         .build();
-        final AutocompleteMatch match2 =
-                new AutocompleteMatchBuilder(OmniboxSuggestionType.NAVSUGGEST).build();
-        final AutocompleteMatch match3 =
+
+        var actualList = List.of(verbatim1, regular, verbatim2);
+        var model =
+                mBuilder.buildDropdownViewInfoList(
+                        mInput,
+                        AutocompleteResult.fromCache(actualList, GroupsInfo.getDefaultInstance()));
+
+        assertEquals(1, model.size());
+
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(regular), any(), anyInt());
+        verify(mMockSuggestionProcessor, never())
+                .populateModel(eq(mInput), eq(verbatim1), any(), anyInt());
+        verify(mMockSuggestionProcessor, never())
+                .populateModel(eq(mInput), eq(verbatim2), any(), anyInt());
+    }
+
+    @Test
+    public void buildVerticalSuggestionsGroup_withoutGroupHeader_noPreviousGroup() {
+        var match =
                 AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
                         .setGroupId(1)
                         .build();
-
-        // Simulate 6 suggestions by repeating the three above.
-        AutocompleteResult mockResult = mock(AutocompleteResult.class);
-        when(mockResult.getSuggestionsList())
-                .thenReturn(Arrays.asList(match1, match2, match1, match2, match3, match3));
-        when(mockResult.getGroupsInfo()).thenReturn(GroupsInfo.newBuilder().build());
-        doNothing().when(mockResult).groupSuggestionsBySearchVsURL(anyInt(), anyInt());
-
+        var matches = List.of(match, match);
         when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
-        when(mMockSuggestionProcessor.getMinimumViewHeight()).thenReturn(10);
 
-        // Scenario 1: everything fits above keyboard. Last 2 suggestions are not touched.
-        mBuilder.setDropdownHeightWithKeyboardActive(90);
-        mBuilder.buildDropdownViewInfoList(mockResult);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(1, 4);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(anyInt(), anyInt());
-        clearInvocations(mockResult);
+        var result =
+                mBuilder.buildVerticalSuggestionsGroup(
+                        mInput, SECTION_1_NO_HEADER, null, matches, /* firstVerticalPosition= */ 5);
 
-        // Scenario 2: Suggestions to group fit just above the keyboard
-        mBuilder.setDropdownHeightWithKeyboardActive(35);
-        mBuilder.buildDropdownViewInfoList(mockResult);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(1, 4);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(anyInt(), anyInt());
-        clearInvocations(mockResult);
+        verify(mMockSuggestionProcessor, times(2)).createModel();
+        verify(mMockSuggestionProcessor, atLeastOnce()).getViewTypeId();
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(match, 5);
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(match), any(), eq(5));
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(match, 6);
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(match), any(), eq(6));
 
-        // Scenario 3a: Some suggestions to group fit above the keyboard
-        mBuilder.setDropdownHeightWithKeyboardActive(25);
-        mBuilder.buildDropdownViewInfoList(mockResult);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(1, 3);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(3, 4);
-        verify(mockResult, times(2)).groupSuggestionsBySearchVsURL(anyInt(), anyInt());
-        clearInvocations(mockResult);
+        verifyNoMoreInteractions(mMockSuggestionProcessor);
 
-        // Scenario 3b: Some suggestions to group fit above the keyboard
-        mBuilder.setDropdownHeightWithKeyboardActive(15);
-        mBuilder.buildDropdownViewInfoList(mockResult);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(1, 2);
-        verify(mockResult, times(1)).groupSuggestionsBySearchVsURL(2, 4);
-        verify(mockResult, times(2)).groupSuggestionsBySearchVsURL(anyInt(), anyInt());
-        clearInvocations(mockResult);
-
-        // Skipping scenario where all suggestions are below the keyboard, because in this scenario
-        // the user can't realistically interact with them.
+        assertEquals(/* 2 suggestions = */ 2, result.size());
     }
 
     @Test
-    @SmallTest
-    public void dividerLineOnTop() {
-        when(mMockDividerLineProcessor.createModel())
-                .thenAnswer((mock) -> new PropertyModel(SuggestionCommonProperties.ALL_KEYS));
-        when(mMockDividerLineProcessor.getViewTypeId())
-                .thenReturn(OmniboxSuggestionUiType.DIVIDER_LINE);
-        mBuilder.setDividerLineProcessorForTest(mMockDividerLineProcessor);
-
-        final List<AutocompleteMatch> actualList = new ArrayList<>();
-        final var groupsDetails =
-                GroupsInfo.newBuilder().putGroupConfigs(1, SECTION_2_WITH_HEADER).build();
-        when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
-
-        AutocompleteMatch suggestion =
+    public void buildVerticalSuggestionsGroup_withoutGroupHeader_verticalPreviousGroup() {
+        var match =
                 AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
                         .setGroupId(1)
                         .build();
+        var matches = List.of(match, match);
+        when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
 
-        actualList.add(suggestion);
-        actualList.add(suggestion);
+        var result =
+                mBuilder.buildVerticalSuggestionsGroup(
+                        mInput,
+                        SECTION_1_NO_HEADER,
+                        SECTION_2_WITH_HEADER,
+                        matches,
+                        /* firstVerticalPosition= */ 5);
 
-        final List<DropdownItemViewInfo> infoList = mBuilder.buildDropdownViewInfoList(
-                AutocompleteResult.fromCache(actualList, groupsDetails));
-        Assert.assertEquals(4, infoList.size()); // 1 divider line + 1 header + 2 suggestions.
+        verify(mMockSuggestionProcessor, times(2)).createModel();
+        verify(mMockSuggestionProcessor, atLeastOnce()).getViewTypeId();
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(match, 5);
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(match), any(), eq(5));
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(match, 6);
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(match), any(), eq(6));
 
-        Assert.assertEquals(infoList.get(0).type, OmniboxSuggestionUiType.DIVIDER_LINE);
-        Assert.assertEquals(infoList.get(1).type, OmniboxSuggestionUiType.HEADER);
-        Assert.assertEquals(infoList.get(2).type, OmniboxSuggestionUiType.DEFAULT);
-        Assert.assertEquals(infoList.get(3).type, OmniboxSuggestionUiType.DEFAULT);
+        verifyNoMoreInteractions(mMockSuggestionProcessor);
 
-        mBuilder.setDividerLineProcessorForTest(null);
+        assertEquals(/* 2 suggestions = */ 2, result.size());
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, result.get(0).type);
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, result.get(1).type);
+        assertEquals(
+                GroupSeparatorType.GAP,
+                result.get(0).model.get(SuggestionCommonProperties.GROUP_SEPARATOR_TYPE));
     }
 
     @Test
-    @SmallTest
-    public void noDividerLineForEmptyList() {
-        when(mMockDividerLineProcessor.createModel())
-                .thenAnswer((mock) -> new PropertyModel(SuggestionCommonProperties.ALL_KEYS));
-        when(mMockDividerLineProcessor.getViewTypeId())
-                .thenReturn(OmniboxSuggestionUiType.DIVIDER_LINE);
-        mBuilder.setDividerLineProcessorForTest(mMockDividerLineProcessor);
+    public void buildVerticalSuggestionsGroup_withGroupHeader_noPreviousGroup() {
+        var match =
+                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
+                        .setGroupId(1)
+                        .build();
+        var matches = List.of(match, match);
+        when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
 
-        final List<DropdownItemViewInfo> infoList =
-                mBuilder.buildDropdownViewInfoList(AutocompleteResult.fromCache(null, null));
-        Assert.assertEquals(0, infoList.size());
+        var result =
+                mBuilder.buildVerticalSuggestionsGroup(
+                        mInput,
+                        SECTION_2_WITH_HEADER,
+                        null,
+                        matches,
+                        /* firstVerticalPosition= */ 7);
 
-        mBuilder.setDividerLineProcessorForTest(null);
+        verify(mMockSuggestionProcessor, times(2)).createModel();
+        verify(mMockSuggestionProcessor, atLeastOnce()).getViewTypeId();
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(match, 7);
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(match), any(), eq(7));
+        verify(mMockSuggestionProcessor).doesProcessSuggestion(match, 8);
+        verify(mMockSuggestionProcessor).populateModel(eq(mInput), eq(match), any(), eq(8));
+
+        verifyNoMoreInteractions(mMockSuggestionProcessor);
+
+        assertEquals(/* 2 suggestions = */ 2, result.size());
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, result.get(0).type);
+        assertEquals(OmniboxSuggestionUiType.DEFAULT, result.get(1).type);
+        assertEquals(
+                SECTION_2_WITH_HEADER.getHeaderText(),
+                result.get(0).model.get(SuggestionCommonProperties.HEADER_TITLE));
+        assertNull(result.get(1).model.get(SuggestionCommonProperties.HEADER_TITLE));
+    }
+
+    @Test
+    public void buildHorizontalSuggestionsGroup_withoutGroupHeader() {
+        var match =
+                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
+                        .setGroupId(1)
+                        .build();
+        var matches = List.of(match, match);
+        when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
+
+        var result =
+                mBuilder.buildHorizontalSuggestionsGroup(
+                        mInput, SECTION_1_NO_HEADER, matches, /* position= */ 5);
+
+        verify(mMockSuggestionProcessor).getViewTypeId();
+        verify(mMockSuggestionProcessor).createModel();
+        verify(mMockSuggestionProcessor, atLeastOnce()).doesProcessSuggestion(match, 5);
+        verify(mMockSuggestionProcessor, times(2))
+                .populateModel(eq(mInput), eq(match), mPropertyModelCaptor.capture(), eq(5));
+        verifyNoMoreInteractions(mMockSuggestionProcessor);
+
+        assertEquals(/* 1 suggestion row = */ 1, result.size());
+
+        // Verify that the same PropertyModel was used to build UI element, and it's the one that
+        // was returned.
+        assertEquals(
+                mPropertyModelCaptor.getAllValues().get(0),
+                mPropertyModelCaptor.getAllValues().get(1));
+        assertEquals(mPropertyModelCaptor.getValue(), result.get(0).model);
+    }
+
+    @Test
+    public void buildHorizontalSuggestionsGroup_withGroupHeader() {
+        var match =
+                AutocompleteMatchBuilder.searchWithType(OmniboxSuggestionType.SEARCH_SUGGEST)
+                        .setGroupId(1)
+                        .build();
+        var matches = List.of(match, match);
+        when(mMockSuggestionProcessor.doesProcessSuggestion(any(), anyInt())).thenReturn(true);
+
+        var result =
+                mBuilder.buildHorizontalSuggestionsGroup(
+                        mInput, SECTION_2_WITH_HEADER, matches, /* position= */ 7);
+
+        verify(mMockSuggestionProcessor).getViewTypeId();
+        verify(mMockSuggestionProcessor).createModel();
+        verify(mMockSuggestionProcessor, atLeastOnce()).doesProcessSuggestion(match, 7);
+        verify(mMockSuggestionProcessor, times(2))
+                .populateModel(eq(mInput), eq(match), mPropertyModelCaptor.capture(), eq(7));
+
+        verifyNoMoreInteractions(mMockSuggestionProcessor);
+
+        assertEquals(/* 1 suggestion row = */ 1, result.size());
+
+        // Verify that the same PropertyModel was used to build UI element, and it's the one that
+        // was returned.
+        assertEquals(
+                mPropertyModelCaptor.getAllValues().get(0),
+                mPropertyModelCaptor.getAllValues().get(1));
+        assertEquals(mPropertyModelCaptor.getValue(), result.get(0).model);
+        assertEquals(
+                SECTION_2_WITH_HEADER.getHeaderText(),
+                result.get(0).model.get(SuggestionCommonProperties.HEADER_TITLE));
     }
 }
